minor heading changes

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 		font-family: "Montserrat";
 		font-size: 24pt;
 	}
-	#description{
-
+	p{
+		text-align: center;
 	}
 	</style>
 </head>
 <body>
-	<p id="author">Hemant Gupta </p>
-	<p id="description">Module : Information Design & Visualization, <b>NID</b> </p>
+	<p><b>Hemant Gupta</b> </p>
+	<p>Module : Information Design & Visualization <b>|</b> 3rd Semester </p>
+	<p>National Institute of Design</p>
 	<div class='tableauPlaceholder' id='viz1508749399642' style='position: relative'>
 		<noscript>
 			<a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Mi&#47;MilitaryAircraftTrades1950-2016&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a>
