--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
 		font-family: "Montserrat";
 		line-height: -2;
 		color: rgb(28,77,200);
+		/*color: rgb(102,170,190);*/
 	}
 	.tableauPlaceholder{
 		margin: auto;
 		padding:20px;
 		max-width: 1200px;
 	}
-	#author{
-		font-family: "Montserrat";
-		font-size: 24pt;
-	}
 	p{
 		text-align: center;
+		font-weight: lighter;
 	}
 	</style>
 </head>
 <body>
 	<p><b>Hemant Gupta</b> </p>
 	<p>Module : Information Design & Visualization <b>|</b> 3rd Semester </p>
-	<p>National Institute of Design</p>
+	<p>Work In Progress...</p>
+
+	
+
 	<div class='tableauPlaceholder' id='viz1508749399642' style='position: relative'>
 		<noscript>
 			<a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Mi&#47;MilitaryAircraftTrades1950-2016&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a>
